--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "sync": "node ./scripts/sync.js",
+    "seed": "node ./scripts/seed.js"
   },
   "author": "luisaM",
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.9.7",
+    "sequelize": "^6.37.7",
+    "dotenv":"^16.4.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "sequelize-cli": "^6.6.3"
   }
 }
