--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "author": "luisaM",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "mongoose": "^8.19.0",
     "mysql2": "^3.9.7",
-    "sequelize": "^6.37.7",
-    "dotenv":"^16.4.5"
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
